[package]
name = "cc2640r2f"
version = "0.0.0"
authors = ["luojia65 <me@luojia.cc>"]
description = "Device support for TI CC2640R2F microcontrollers"
documentation = "https://docs.rs/cc2640r2f"
repository = "https://github.com/luojia65/cc2640r2f"
edition = "2018"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
